--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,34 @@ body {
     padding: 4rem 0;
 }
 
+.hero-section {
+    position: relative;
+    background-color: var(--dark-bg);
+    min-height: 80vh;
+    padding: 4rem 0;
+    overflow: hidden;
+}
+
+.hero-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/background.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.2; /* Controle da opacidade */
+    z-index: 0;
+}
+
+.hero-section > * {
+    position: relative;
+    z-index: 1;
+}
+
 .hero-title {
     color: var(--primary-color);
     font-size: 3rem;
